# Weather-App-Desktop

./: .gitignore  jsconfig.json  package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: CircularPopup.tsx  ForecastCard.tsx  WeatherCard.tsx  WeatherCardLoading.tsx
src/utils/: api.ts
